[gd_scene load_steps=19 format=2]

[ext_resource path="res://Prefabs/Dynamic_Fonts/UI_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/UI/input_menu_bg.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/input_menu_bg0.png" type="Texture" id=3]
[ext_resource path="res://Prefabs/Themes/Video_menu_theme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/UI/resolution_button/resolution_bg2.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Video_image.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/check_button/check_fullscreen_bg.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/check_button/check_borderless_bg.png" type="Texture" id=8]
[ext_resource path="res://Prefabs/audio_manager.tscn" type="PackedScene" id=9]
[ext_resource path="res://Prefabs/Shaders/InfiniteScrollTexture_shader.gdshader" type="Shader" id=10]
[ext_resource path="res://Prefabs/Shaders/UI_shader_blur.tres" type="Shader" id=11]
[ext_resource path="res://Assets/UI/check_button/check_vsync_bg.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Video_Menu.gd" type="Script" id=13]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 11 )
shader_param/tint = Color( 0.0862745, 0, 0.196078, 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 10 )
shader_param/Direction = Vector2( 1, 1 )
shader_param/Speed = 0.05

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform vec2 Direction = vec2(1.0,0.0);
uniform float Speed = 0.08;

void fragment()
{
	COLOR = texture(TEXTURE, UV + (Direction * TIME * Speed));
	
	
	
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 5 )
shader_param/Direction = Vector2( 0, 1 )
shader_param/Speed = 0.08

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 10 )
shader_param/Direction = Vector2( 0, 1 )
shader_param/Speed = 0.08

[node name="Video_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="Sprite" parent="Background"]
texture = ExtResource( 3 )
centered = false

[node name="ColorRect" type="ColorRect" parent="Background"]
visible = false
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0.0627451 )
material = SubResource( 2 )
position = Vector2( 160, 92 )
texture = ExtResource( 2 )

[node name="CONTROLS1" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0.196078 )
material = SubResource( 4 )
position = Vector2( 25, 89 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="CONTROLS2" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0.196078 )
material = SubResource( 6 )
position = Vector2( 297, 89 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Buttons_group" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -74.0
margin_right = 80.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolution" type="Container" parent="Buttons_group"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResolutionBg" type="Sprite" parent="Buttons_group/Resolution"]
position = Vector2( 64, 10 )
texture = ExtResource( 5 )

[node name="resolution_button" type="OptionButton" parent="Buttons_group/Resolution/ResolutionBg"]
margin_left = 6.0
margin_top = -8.0
margin_right = 73.0
margin_bottom = 8.0
theme = ExtResource( 4 )
text = "1024x576"
selected = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Fullscreen" type="Container" parent="Buttons_group"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_top = 56.0
margin_right = 24.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenBg" type="Sprite" parent="Buttons_group/Fullscreen"]
position = Vector2( 50, 10 )
texture = ExtResource( 7 )

[node name="fullscreen_button" type="CheckBox" parent="Buttons_group/Fullscreen/FullscreenBg"]
margin_left = 31.0
margin_top = -8.0
margin_right = 47.0
margin_bottom = 8.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Borderless" type="Container" parent="Buttons_group"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_top = 80.0
margin_right = 24.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderlessBg" type="Sprite" parent="Buttons_group/Borderless"]
position = Vector2( 50, 10 )
texture = ExtResource( 8 )

[node name="borderless_button" type="CheckBox" parent="Buttons_group/Borderless/BorderlessBg"]
margin_left = 31.0
margin_top = -8.0
margin_right = 47.0
margin_bottom = 8.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vsync" type="Container" parent="Buttons_group"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_top = 104.0
margin_right = 24.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VsyncBg" type="Sprite" parent="Buttons_group/Vsync"]
position = Vector2( 50, 10 )
texture = ExtResource( 12 )

[node name="vsync_button" type="CheckBox" parent="Buttons_group/Vsync/VsyncBg"]
margin_left = 31.0
margin_top = -8.0
margin_right = 47.0
margin_bottom = 8.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio_manager" parent="." instance=ExtResource( 9 )]

[node name="hint" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_right = 147.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 1 )
text = "Select the buttons below to change video settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_focused" from="Buttons_group/Resolution/ResolutionBg/resolution_button" to="." method="_on_resolution_button_item_focused"]
[connection signal="item_selected" from="Buttons_group/Resolution/ResolutionBg/resolution_button" to="." method="_on_resolution_button_item_selected"]
[connection signal="mouse_exited" from="Buttons_group/Resolution/ResolutionBg/resolution_button" to="." method="_on_resolution_button_mouse_exited"]
[connection signal="toggled" from="Buttons_group/Fullscreen/FullscreenBg/fullscreen_button" to="." method="_on_fullscreen_button_toggled"]
[connection signal="toggled" from="Buttons_group/Borderless/BorderlessBg/borderless_button" to="." method="_on_borderless_button_toggled"]
[connection signal="toggled" from="Buttons_group/Vsync/VsyncBg/vsync_button" to="." method="_on_vsync_button_toggled"]
